syntax = "proto3";

package background;

service Server {
  rpc Run(Input) returns (Output) {}
}

message Input {
  string input_path = 1;
  string input_file = 2;
  string output_path = 3;
  string output_file = 4;
}

message Output {
  string response = 1;
  string path = 2;
}